--- a/.classpath
+++ b/.classpath
@@ -5,12 +5,8 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/Thomas/Desktop/Server/TestServer/1.12/plugins/Vault.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Thomas/Desktop/Server/TestServer/1.12/plugins/dynmap-2.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Thomas/Desktop/Server/buildTools/spigot-1.12.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
